Applied reflective-coffeescript modifications to 1.6.3 coffeescript
Conflicts:
	README
	package.json
	src/nodes.coffee
	src/rewriter.coffee

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description":  "Unfancy JavaScript",
   "keywords":     ["javascript", "language", "coffeescript", "compiler"],
   "author":       "Jeremy Ashkenas",
-  "version":      "1.6.3",
+  "version":      "1.6.3-reflective",
   "license":      "MIT",
   "engines":      {
     "node":       ">=0.8.0"
