--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jison":      ">=0.2.0"
   },
   "dependencies": {
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "eco": "~1.1",
+    "highlight.js": "~8.0"
   }
 }
